--- a/style.css
+++ b/style.css
@@ -128,6 +128,11 @@
     -moz-box-shadow: 10px 10px 24px -7px rgba(0, 0, 0, 0.75);
     box-shadow: 10px 10px 24px -7px rgba(0, 0, 0, 0.75);
     border-radius: 5px;
+
+    max-height: 70%;
+    /* align-self: center !important; */
+    justify-self: center !important;
+    
 }
 
 h1 {
@@ -150,6 +155,7 @@ h1 {
     font-size: 1rem;
     font-weight: 800;
     color: black;
+    padding-top: 1rem;
 }
 
 .btn1 {
@@ -261,7 +267,7 @@ h1 {
 .item {
     position: relative;
     background-color: #1d1d1d;
-    border-radius: 5%;
+    border-radius: 10%;
     
 }
 
@@ -277,8 +283,8 @@ h1 {
 .item span {
     position: absolute;
     top: 40%;
-    left: 45%;
-    font-size: 40px;
+    left: 42%;
+    font-size: 80px;
     color: #461610;
     cursor: pointer;
     opacity: 0;
@@ -311,7 +317,7 @@ h1 {
 }
 
 .Blog {
-    background-color: #353535;
+    background-color: #1d1d1d;
 }
 
 .blog-img {
@@ -350,7 +356,7 @@ h1 {
 }
 
 footer {
-    background-color: #353535;
+    background-color: #1d1d1d;
     color: #D9D9D9;
 }
 
