--- a/style.css
+++ b/style.css
@@ -200,15 +200,15 @@ h1 {
 
 /* SERVICES SECTION */
 
-.services h1 {
+.socials h1 {
     color: #D9D9D9;
 }
 
-.services {
+.socials {
     background-color: #1d1d1d;
 }
 
-.services-card {
+.socials-card {
     border: none;
     border-radius: 5%;
     outline: none;
@@ -232,13 +232,14 @@ h1 {
     margin-bottom: 20px;
     font-size: 30px;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 .card:hover .circle {
     background-color: #461610;
     color: #D9D9D9;
     transition: 0.3s;
-    
+    cursor: pointer;
     margin-bottom: 20px;
 }
 
@@ -312,19 +313,15 @@ h1 {
 }
 
 /* BLOG SECTION */
-.Blog h1 {
+.Video h1 {
     color: #D9D9D9;
 }
 
-.Blog {
+.Video {
     background-color: #1d1d1d;
 }
 
-.blog-img {
-    height: 250px;
-    width: auto;
-    object-fit: cover;
-}
+
 
 /* CONTACT SECTION */
 .circle {
