--- a/style.css
+++ b/style.css
@@ -5,6 +5,14 @@
    
 }
 
+html,body
+{
+    width: 100%;
+    
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
 
 
 /* NAVBAR SECTION */
@@ -36,6 +44,33 @@
     cursor: pointer;
     text-decoration: none;
 }
+.navbar-collapse{
+    color: #ffffff;
+    
+}
+.navbar-toggler{
+    
+    color: #ffffff;
+}
+@media (max-width: 480px){
+    .navbar-brand {
+        font-size: .75rem;
+        font-weight: 800;
+        color: #ffffff;
+        cursor: pointer;
+        text-decoration: none;
+    }
+}
+@media (min-width:481px) and (max-width: 870px){
+    .navbar-brand {
+        font-size: 1rem;
+        font-weight: 800;
+        color: #ffffff;
+        cursor: pointer;
+        text-decoration: none;
+    }
+}
+
 
 /* main section */
 
@@ -50,7 +85,7 @@
 .main h3 {
     font-size: 4.4rem;
     font-weight: 700;
-    /* color: #284B63; */
+
     color: #000000;
 }
 
@@ -108,6 +143,8 @@
     box-shadow: 10px 10px 23px 5px rgba(0,0,0,0.52);
 }
 
+
+
 .redTeamLogo{
     width: 350px !important;
     text-align: center !important;
@@ -115,14 +152,31 @@
     display: block;
 }
 
-/* .about img {
-    -webkit-box-shadow: 10px 10px 24px -7px rgba(0, 0, 0, 0.75);
-    -moz-box-shadow: 10px 10px 24px -7px rgba(0, 0, 0, 0.75);
-    box-shadow: 10px 10px 24px -7px rgba(0, 0, 0, 0.75);
-    border-radius: 5px;
+@media (max-width: 480px){
+    .redTeamLogo{
+        width: 200px !important;
+        text-align: center !important;
+        margin: auto;
+        display: block;
+    }
+    
+    div.button_holder{
+        display:none;
+    }
+}
+@media (min-width:481px) and (max-width: 870px){
+    .redTeamLogo{
+        width: 200px !important;
+        text-align: center !important;
+        margin: auto;
+        display: block;
+    }
+    div.button_holder{
+        display:none;
+    }
+}
 
-} */
-
+ /*about Section*/
 .about_img img {
     -webkit-box-shadow: 10px 10px 24px -7px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 10px 10px 24px -7px rgba(0, 0, 0, 0.75);
@@ -194,8 +248,6 @@ h1 {
     color: white;
     background-color: #461610;
     border-radius: 4px;
-
-
 }
 
 /* SERVICES SECTION */
